--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,12 +62,12 @@ jobs:
             chromedriver --version
       - checkout
       - restore_cache:
-          key: ng-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: ng-project-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
       - run: npm run frontend:install
       - save_cache:
-          key: ng-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: ng-project-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
           paths:
-            - node_modules
+            - udagram-frontend/node_modules
       - run:
           name: Unit TEST FRONTEND
           command: npm run frontend:test
