--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
       - save_cache:
           key: ng-project-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
           paths:
-            - udagram-frontend/node_modules
+            - node_modules
       - run:
           name: Unit TEST FRONTEND
           command: npm run frontend:test
