--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,21 +53,21 @@ jobs:
     steps:
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
-      - node/install:
-          node-version: 16.17.1
       - run:
           name: Check Browser Tools Installed
           command: |
             google-chrome --version
             chromedriver --version
       - checkout
+      - node/install:
+          node-version: 16.17.1
       - restore_cache:
           key: ng-project-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
       - run: npm run frontend:install
       - save_cache:
           key: ng-project-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
           paths:
-            - node_modules
+            - udagram-frontend/node_modules
       - run:
           name: Unit TEST FRONTEND
           command: npm run frontend:test
