--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,19 +48,10 @@ jobs:
   # deploy step will run only after manual approval
   test:
     docker:
-      - image: "cimg/node:16.17.1"
+      - image: "circleci/node:10-browsers"
     # more steps needed for frontend unit test
     steps:
-      - browser-tools/install-chrome
-      - browser-tools/install-chromedriver
-      - run:
-          name: Check Browser Tools Installed
-          command: |
-            google-chrome --version
-            chromedriver --version
       - checkout
-      - node/install:
-          node-version: 16.17.1
       - restore_cache:
           key: ng-project-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
       - run: npm run frontend:install
