--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ orbs:
   node: circleci/node@5.0.2
   eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.1
-  browser-tools: circleci/browser-tools@1.4.0
   # different jobs are calles later in the workflows sections
 jobs:
   build:
@@ -53,10 +52,10 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: udagram-frontend-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: udagram-frontend-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
       - run: npm run frontend:install
       - save_cache:
-          key: udagram-frontend-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: udagram-frontend-{{ .Branch }}-{{ checksum "udagram-frontend/package-lock.json" }}
           paths:
             - ~/udagram-frontend/node_modules
       - run:
