--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,22 +24,22 @@ jobs:
             echo "NPM --version" 
             echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API
-      - run:
-          name: Install API Dependencies
-          command: |
-            npm run api:install
-      # TODO: Lint the frontend
+      # Lint the frontend
       - run:
           name: Front-End Lint
           command: |
             npm run frontend:lint
-      # TODO: Build the frontend app
+      # Build the frontend app
       - run:
           name: Front-End Build
           command: |
             npm run frontend:build
-      # TODO: Build the backend API
+      # Install dependencies in the the backend API
+      - run:
+          name: Install API Dependencies
+          command: |
+            npm run api:install
+      # Build the backend API
       - run:
           name: API Build
           command: |
@@ -57,7 +57,7 @@ jobs:
       - checkout
       - run:
           name: Deploy App
-          # TODO: Install, build, deploy in both apps
+          # Install, build, deploy in both apps
           command: |
             npm run deploy
 
